--- a/index.html
+++ b/index.html
@@ -4,9 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width= , initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="shortcut icon" type="image/png" href="./img/ezgif.com-gif-maker.png">
+    <link href="https://fonts.googleapis.com/css?family=Poppins:400,500,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" integrity="sha256-46qynGAkLSFpVbEBog43gvNhfrOj+BmwXdxFgVK/Kvc=" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
     <title>codeBlooded</title>
 </head>
 <body>
-    
+   <header>
+    <p class="animated zoomInUp">C<span><img src="./img/blood-drop.svg" alt=""></span>DE_BLOODED</p>
+    <h1 class="animated zoomIn delay-1s">RESOURCES FOR BUILDING BEAUTIFUL WEBSITES USING</h1>
+    <br>
+    <div>
+        <i class="fab fa-html5 html animated zoomIn delay-2s"></i>
+        <i class="fab fa-css3-alt css animated zoomIn delay-3s"></i>
+        <i class="fab fa-js-square js animated zoomIn delay-4s"></i>
+    </div>
+   </header> 
+
+
+
+
 </body>
 </html>
