--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 </head>
 <body>
    <header>
-    <p class="animated zoomInUp">C<span><img src="./img/blood-drop.svg" alt=""></span>DE_BLOODED</p>
+    <p class="tracking-in-expand">C<span><img src="./img/blood-drop.svg" alt=""></span>DE_BLOODED</p>
     <h1 class="animated zoomIn delay-1s">RESOURCES FOR BUILDING BEAUTIFUL WEBSITES USING</h1>
     <br>
     <div>
-        <i class="fab fa-html5 html animated zoomIn delay-2s"></i>
-        <i class="fab fa-css3-alt css animated zoomIn delay-3s"></i>
-        <i class="fab fa-js-square js animated zoomIn delay-4s"></i>
+        <i class="fab fa-html5 html bounce-in-top"></i>
+        <i class="fab fa-css3-alt css bounce-in-top"></i>
+        <i class="fab fa-js-square js bounce-in-top"></i>
     </div>
    </header> 
 
