--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <title>codeBlooded</title>
 </head>
 <body>
+
+
    <header>
     <p class="tracking-in-expand">C<span><img src="./img/blood-drop.svg" alt=""></span>DE_BLOODED</p>
     <h1 class="animated zoomIn delay-1s">RESOURCES FOR BUILDING BEAUTIFUL WEBSITES USING</h1>
@@ -23,6 +25,33 @@
     </div>
    </header> 
 
+   <section class="tab--sections">
+       <p>Tool Categories</p>
+       <div class="cate">
+        <div>
+           <a href="#html"><button class="dark">HTML</button></a> 
+           <button class="dark">CSS</button>
+           <button class="dark">JS</button>
+       </div>
+
+       <div>
+            <button class="red">FONTS</button>
+            <button class="red">COLORS</button>
+            <button class="red">IMAGES</button>
+       </div>
+
+       <div>
+            <button class="green">ICONS</button>
+            <button class="green">DESIGN</button>
+            <button class="green">TOOLS</button> 
+
+        </div>
+        </div>
+   </section>
+
+   <section id="html">
+
+   </section>
 
 
 
