change of look and feel of page and adding classes

--- a/index.html
+++ b/index.html
@@ -13,10 +13,22 @@
 </head>
 <body>
 
+    <nav>
+
+            <p><i class="fas fa-code"></i> Code_Blooded</p>
+
+        <ul>
+
+            <a href=""><li>HOME</li></a>
+            <a href="#cate"><li>TOOL LIST</li></a>
+            <a href=""><li>GITHUB</li></a>
+            <a href=""><li>IDEA</li></a>
+        </ul>
+    </nav>
 
    <header>
-    <p class="tracking-in-expand">C<span><img src="./img/blood-drop.svg" alt=""></span>DE_BLOODED</p>
-    <h1 class="animated zoomIn delay-1s">RESOURCES FOR BUILDING BEAUTIFUL WEBSITES USING</h1>
+    <p class="tracking-in-expand">C<span><img src="./img/blood-drop.svg" alt=""></span>de_blooded</p>
+    <h1 class="tracking-in-expand">RESOURCES FOR BUILDING BEAUTIFUL WEBSITES USING</h1>
     <br>
     <div>
         <i class="fab fa-html5 html bounce-in-top"></i>
@@ -25,31 +37,61 @@
     </div>
    </header> 
 
-   <section class="tab--sections">
+   <section class="tab--sections" id="cate">
        <p>Tool Categories</p>
        <div class="cate">
-        <div>
-           <a href="#html"><button class="dark">HTML</button></a> 
-           <button class="dark">CSS</button>
-           <button class="dark">JS</button>
-       </div>
-
-       <div>
-            <button class="red">FONTS</button>
-            <button class="red">COLORS</button>
-            <button class="red">IMAGES</button>
-       </div>
-
-       <div>
-            <button class="green">ICONS</button>
-            <button class="green">DESIGN</button>
-            <button class="green">TOOLS</button> 
-
-        </div>
-        </div>
+        
+           <a href="#html"><button class="btn-cate orange">HTML</button></a> 
+            <button class="btn-cate orange">CSS</button>
+            <button class="btn-cate orange">JS</button>
+            <button class="btn-cate orange">FONTS</button>
+            <button class="btn-cate orange">COLORS</button>
+            <button class="btn-cate orange">IMAGES</button>
+            <button class="btn-cate orange">ICONS</button>
+            <button class="btn-cate orange">DESIGN</button>
+            <button class="btn-cate orange">TOOLS</button>
+        </div>    
    </section>
 
    <section id="html">
+
+    <p class="lang-heading">HTML5 RESOURCES</p>
+
+    <div class="wrapper">
+        <div class="card">
+            <img src="./img/logo/mdn.png">
+            <p class="res-heading">HTML5 Reference by MDN</p>
+            <p class="res-para">
+                You don't need to know every HTML5 element.<br>
+                I just use this excellent reference all the time.
+            </p>
+
+            <button class="btn-card"><a href="#">Know more!</a></button>
+
+        </div>
+
+        <div class="card">
+                <img src="./img/logo/mdn.png">
+                <p class="res-heading">HTML5 Reference by MDN</p>
+                <p class="res-para">
+                    You don't need to know every HTML5 element.<br>
+                    I just use this excellent reference all the time.
+                </p>
+
+                <button class="btn-card"><a href="#">Know more!</a></button>
+        </div>
+
+        <div class="card">
+                <img src="./img/logo/mdn.png">
+                <p class="res-heading">HTML5 Reference by MDN</p>
+                <p class="res-para">
+                    You don't need to know every HTML5 element.<br>
+                    I just use this excellent reference all the time.
+                </p>
+
+                <button class="btn-card"><a href="#">Know more!</a></button>
+        </div>
+    </div>
 
    </section>
 
