PLAYING WITH LOOK {NEVER SETTLE}

--- a/index.html
+++ b/index.html
@@ -13,35 +13,37 @@
 </head>
 <body>
 
-    <nav>
+   <header>
 
-            <p><i class="fas fa-code"></i> Code_Blooded</p>
+    <nav class="links">
+        <a href="">BHUSHAN</a>
+        <a href="">ME MEM ME </a>
+        <a href="">ANANT </a>
+        <a href="">CHAL NABC</a>
 
-        <ul>
-
-            <a href=""><li>HOME</li></a>
-            <a href="#cate"><li>TOOL LIST</li></a>
-            <a href=""><li>GITHUB</li></a>
-            <a href=""><li>IDEA</li></a>
-        </ul>
     </nav>
 
-   <header>
-    <p class="tracking-in-expand">C<span><img src="./img/blood-drop.svg" alt=""></span>de_blooded</p>
-    <h1 class="tracking-in-expand">RESOURCES FOR BUILDING BEAUTIFUL WEBSITES USING</h1>
-    <br>
     <div>
+    <h1>RESOURCES <br>FOR BUILDING WEBSITES</h1>
+    <h1 class="line">___________________________</h1>
+        <br>
+    <p>CODE</p>
+    <p class="blood">BLOODED_</p>
+    </div>
+    <p class="my--name">Coded by <span>Anant Bhushan</span></p>    
+    <br>
+    <!-- <div>
         <i class="fab fa-html5 html bounce-in-top"></i>
         <i class="fab fa-css3-alt css bounce-in-top"></i>
         <i class="fab fa-js-square js bounce-in-top"></i>
-    </div>
+    </div> -->
    </header> 
 
    <section class="tab--sections" id="cate">
        <p>Tool Categories</p>
        <div class="cate">
         
-           <a href="#html"><button class="btn-cate orange">HTML</button></a> 
+           <a href="#html"><button class="btn-cate">HTML</button></i></a> 
             <button class="btn-cate orange">CSS</button>
             <button class="btn-cate orange">JS</button>
             <button class="btn-cate orange">FONTS</button>
