Restless for making it good looking

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
    <header>
 
     <nav class="links">
-        <a href="">BHUSHAN</a>
-        <a href="">ME MEM ME </a>
-        <a href="">ANANT </a>
-        <a href="">CHAL NABC</a>
+        <a href="#" class="black">BHUSHAN</a>
+        <a href="#" class="black">ME MEM ME </a>
+        <a href="#" class="black">ANANT </a>
+        <a href="#" class="black">CHAL NABC</a>
 
     </nav>
 
@@ -55,47 +55,45 @@
         </div>    
    </section>
 
-   <section id="html">
+   <section class="html" id="html">
 
     <p class="lang-heading">HTML5 RESOURCES</p>
-
-    <div class="wrapper">
+    <div class="container">
         <div class="card">
-            <img src="./img/logo/mdn.png">
-            <p class="res-heading">HTML5 Reference by MDN</p>
-            <p class="res-para">
-                You don't need to know every HTML5 element.<br>
-                I just use this excellent reference all the time.
-            </p>
-
-            <button class="btn-card"><a href="#">Know more!</a></button>
-
+            <img src="./img/logo/mdn.png" class="res--img">
+            <p class="res--name">BHUSHAN KA HMTL</p>
+            <p class="res--desc">Lorem ipsum dolor sit amet consectetur adipisicing elit.<br>
+                Reiciendis nihil eum porro inventore vitae nisi<br>
+                perspiciatis assumenda nostrum delectus corporis.</p>
+            
+            <a href="#" class="btn--card">KNOW MORE!</a>
+            
         </div>
 
         <div class="card">
-                <img src="./img/logo/mdn.png">
-                <p class="res-heading">HTML5 Reference by MDN</p>
-                <p class="res-para">
-                    You don't need to know every HTML5 element.<br>
-                    I just use this excellent reference all the time.
-                </p>
+                <img src="./img/logo/mdn.png" class="res--img">
+                <p class="res--name">BHUSHAN KA HMTL</p>
+                <p class="res--desc">Lorem ipsum dolor sit amet consectetur adipisicing elit.<br>
+                    Reiciendis nihil eum porro inventore vitae nisi<br>
+                    perspiciatis assumenda nostrum delectus corporis.</p>
 
-                <button class="btn-card"><a href="#">Know more!</a></button>
+                    <a href="#" class="btn--card">KNOW MORE!</a>    
         </div>
 
         <div class="card">
-                <img src="./img/logo/mdn.png">
-                <p class="res-heading">HTML5 Reference by MDN</p>
-                <p class="res-para">
-                    You don't need to know every HTML5 element.<br>
-                    I just use this excellent reference all the time.
-                </p>
+                <img src="./img/logo/mdn.png" class="res--img">
+                <p class="res--name">BHUSHAN KA HMTL</p>
+                <p class="res--desc">Lorem ipsum dolor sit amet consectetur adipisicing elit.<br>
+                    Reiciendis nihil eum porro inventore vitae nisi<br>
+                    perspiciatis assumenda nostrum delectus corporis.</p>
 
-                <button class="btn-card"><a href="#">Know more!</a></button>
+                    <a href="#" class="btn--card">KNOW MORE!</a>    
         </div>
     </div>
 
    </section>
+
+   <section></section>
 
 
 
