--- a/index.html
+++ b/index.html
@@ -185,8 +185,8 @@
         </div>
    </section>
 
-   <section class="css" id="css">
-        <p class="lang-heading">CSS RESOURCES</p>
+   <section class="js" id="js">
+        <p class="lang-heading">JS RESOURCES</p>
 
         <div class="container">
                 <div class="card">
