--- a/index.html
+++ b/index.html
@@ -17,10 +17,11 @@
    <header>
 
     <nav class="links">
-        <a href="#" class="black">BHUSHAN</a>
-        <a href="#" class="black">ME MEM ME </a>
-        <a href="#" class="black">ANANT </a>
-        <a href="#" class="black">CHAL NABC</a>
+        <a href="#cate" class="black ho">LIST SECTION</a>
+        <a href="https://github.com/anant0036" target="_blank" class="black ho">GITHUB </a>
+        <a href="#feed" class="black ho">FEEDBACK </a>
+        <a href="./BHUSHAN CV.pdf" download class="black ho">HIRE ME</a>
+
 
     </nav>
 
@@ -38,7 +39,13 @@
         <i class="fab fa-css3-alt css bounce-in-top"></i>
         <i class="fab fa-js-square js bounce-in-top"></i>
     </div> -->
+
+                <div class="dir--div">
+                        <a href="#cate"><i class="icon ion-md-exit dir"></i></a>
+                </div>
    </header> 
+
+
 
    <section class="tab--sections" id="cate">
        <p>Tool Categories</p>
@@ -681,7 +688,7 @@
 
 
 
-   <footer>
+   <footer id="feed">
        <div class="footer-cont">
 
                 <div class="my">
