--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 
    <header>
 
-    <nav class="links">
-        <a href="#cate" class="black ho">LIST SECTION</a>
+    <nav class="links text-focus-in">
+        <a href="#cate" class="black ho">SECTION LIST</a>
         <a href="https://github.com/anant0036" target="_blank" class="black ho">GITHUB </a>
         <a href="#feed" class="black ho">FEEDBACK </a>
         <a href="./BHUSHAN CV.pdf" download class="black ho">HIRE ME</a>
@@ -26,13 +26,13 @@
     </nav>
 
     <div>
-    <h1>RESOURCES <br>FOR BUILDING WEBSITES</h1>
+    <h1 class="focus-in-expand">RESOURCES <br>FOR BUILDING WEBSITES</h1>
     <h1 class="line">___________________________</h1>
         <br>
-    <p>CODE</p>
-    <p class="blood">BLOODED_</p>
+    <p class="focus-in-expand">CODE</p>
+    <p class="blood focus-in-expand">BLOODED_</p>
     </div>
-    <p class="my--name">Coded by <span>Anant Bhushan</span></p>    
+    <p class="my--name text-focus-in">Coded by <span>Anant Bhushan</span></p>    
     <br>
     <!-- <div>
         <i class="fab fa-html5 html bounce-in-top"></i>
@@ -63,7 +63,7 @@
         </div>    
    </section>
 
-   <section class="html" id="html">
+   <section class="html light--sec" id="html">
 
     <p class="lang-heading">HTML5 RESOURCES</p>
     <div class="container">
@@ -193,7 +193,7 @@
         </div>
    </section>
 
-   <section class="js" id="js">
+   <section class="js light--sec" id="js">
         <p class="lang-heading">JAVASCRIPT RESOURCES</p>
 
         <div class="container">
@@ -333,7 +333,7 @@
         </div>
    </section>
 
-   <section class="color" id="color">
+   <section class="color light--sec" id="color">
         <p class="lang-heading">GREAT COLORS AND TOOLS</p>
 
         <div class="container">
@@ -501,7 +501,7 @@
         </div>
    </section>
 
-   <section class="icons" id="icons">
+   <section class="icons light--sec" id="icons">
         <p class="lang-heading">BEST ICONS AND TOOLS</p>
 
         <div class="container">
@@ -651,7 +651,7 @@
         </div>
    </section>
 
-   <section class="tool" id="tool">
+   <section class="tool light--sec" id="tool">
         <p class="lang-heading">DEVELOPMENT TOOLS
         </p>
 
