READY FOR DEPLOYING  :) ;)

--- a/index.html
+++ b/index.html
@@ -720,3 +720,31 @@
 
 </body>
 </html>
+
+<!-- DONE -->
+
+
+
+
+
+
+
+<!-- //.....................................................................................................................................................................................................
+//....CCCCCCC......OOOOOOO.....DDDDDDDDD....EEEEEEEEEEE...........BBBBBBBBBB..BYYY....YYYY...........TTTTTTTTTTTHHHH...HHHH..EEEEEEEEEEE...........NNNN...NNNN..EEEEEEEEEEE.RRRRRRRRRR...DDDDDDDDD.....
+//...CCCCCCCCC....OOOOOOOOOO...DDDDDDDDDD...EEEEEEEEEEE...........BBBBBBBBBBB.BYYYY..YYYYY...........TTTTTTTTTTTHHHH...HHHH..EEEEEEEEEEE...........NNNNN..NNNN..EEEEEEEEEEE.RRRRRRRRRRR..DDDDDDDDDD....
+//..CCCCCCCCCCC..OOOOOOOOOOOO..DDDDDDDDDDD..EEEEEEEEEEE...........BBBBBBBBBBB..YYYY..YYYY............TTTTTTTTTTTHHHH...HHHH..EEEEEEEEEEE...........NNNNN..NNNN..EEEEEEEEEEE.RRRRRRRRRRR..DDDDDDDDDDD...
+//..CCCC...CCCCC.OOOOO..OOOOO..DDDD...DDDD..EEEE..................BBBB...BBBB..YYYYYYYYY................TTTT....HHHH...HHHH..EEEE..................NNNNNN.NNNN..EEEE........RRRR...RRRRR.DDDD...DDDD...
+//.CCCC.....CCC.OOOOO....OOOOO.DDDD....DDDD.EEEE..................BBBB...BBBB...YYYYYYYY................TTTT....HHHH...HHHH..EEEE..................NNNNNN.NNNN..EEEE........RRRR...RRRRR.DDDD....DDDD..
+//.CCCC.........OOOO......OOOO.DDDD....DDDD.EEEEEEEEEE............BBBBBBBBBBB....YYYYYY.................TTTT....HHHHHHHHHHH..EEEEEEEEEE............NNNNNNNNNNN..EEEEEEEEEE..RRRRRRRRRRR..DDDD....DDDD..
+//.CCCC.........OOOO......OOOO.DDDD....DDDD.EEEEEEEEEE............BBBBBBBBBB.....YYYYYY.................TTTT....HHHHHHHHHHH..EEEEEEEEEE............NNNNNNNNNNN..EEEEEEEEEE..RRRRRRRRRRR..DDDD....DDDD..
+//.CCCC.........OOOO......OOOO.DDDD....DDDD.EEEEEEEEEE............BBBBBBBBBBB.....YYYY..................TTTT....HHHHHHHHHHH..EEEEEEEEEE............NNNNNNNNNNN..EEEEEEEEEE..RRRRRRRR.....DDDD....DDDD..
+//.CCCC.....CCC.OOOOO....OOOOO.DDDD....DDDD.EEEE..................BBBB....BBBB....YYYY..................TTTT....HHHH...HHHH..EEEE..................NNNNNNNNNNN..EEEE........RRRR.RRRR....DDDD....DDDD..
+//..CCCC...CCCCC.OOOOO..OOOOO..DDDD...DDDDD.EEEE..................BBBB....BBBB....YYYY..................TTTT....HHHH...HHHH..EEEE..................NNNN.NNNNNN..EEEE........RRRR..RRRR...DDDD...DDDDD..
+//..CCCCCCCCCCC..OOOOOOOOOOOO..DDDDDDDDDDD..EEEEEEEEEEE...........BBBBBBBBBBBB....YYYY..................TTTT....HHHH...HHHH..EEEEEEEEEEE...........NNNN..NNNNN..EEEEEEEEEEE.RRRR..RRRRR..DDDDDDDDDDD...
+//...CCCCCCCCCC...OOOOOOOOOO...DDDDDDDDDD...EEEEEEEEEEE...........BBBBBBBBBBB.....YYYY..................TTTT....HHHH...HHHH..EEEEEEEEEEE...........NNNN..NNNNN..EEEEEEEEEEE.RRRR...RRRRR.DDDDDDDDDD....
+//....CCCCCCC.......OOOOOO.....DDDDDDDDD....EEEEEEEEEEE...........BBBBBBBBBB......YYYY..................TTTT....HHHH...HHHH..EEEEEEEEEEE...........NNNN...NNNN..EEEEEEEEEEE.RRRR....RRRR.DDDDDDDDD.....
+//.....................................................................................................................................................................................................
+//.....................................................................................................................................................................................................
+//.....................................................................................................................................EE__________....................................................
+//.....................................................................................................................................EE__________....................................................
+//..................................................................................................................................................................................................... -->
