--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <a href="#cate" class="black ho">SECTION LIST</a>
         <a href="https://github.com/anant0036" target="_blank" class="black ho">GITHUB </a>
         <a href="#feed" class="black ho">FEEDBACK </a>
-        <a href="./BHUSHAN CV.pdf" download class="black ho">HIRE ME</a>
+        <a href="#" download class="black ho">HIRE ME</a>
 
 
     </nav>
